[package]
name = "obj-rs"
version = "0.4.16"
authors = ["Hyeon Kim <simnalamburt@gmail.com>", "icelight0 <linus.kramer@gmail.com>"]
license = "BSD-2-Clause"
keywords = ["graphics", "obj", "WaveFront", "3D", "parser"]
readme = "README.md"

description = """
Wavefront obj parser for Rust. It handles both 'obj' and 'mtl' formats.
"""

[lib]
name = "obj"

[features]
glium-support = ["glium"]

[dependencies]
glium = { version = "0.13", default-features = false, optional = true }
vec_map = "0.3.0"
rustc-serialize = "0.3"
